[tool.poetry]
name = "sunsetbottestphase"
version = "0.1.0"
description = ""
authors = ["Jassherrin jassherrin@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^3.8.2"
yfinance = "^0.1.63"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
